# rawenc

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: ProjectConfigs.cmake  ProjectOptions.cmake
cmake/modules/: AddBoost.cmake  AddFFMpeg.cmake  AddLibV4l2.cmake  AddSigCpp.cmake  AddSpdLog.cmake  FindLibV4l2.cmake
cmake/presets/: LegacyPresets.json  VcpkgPresets.json
src/: Application.cpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Encoder.cpp  Encoder.hpp  Logger.hpp  LoggerInitializer.cpp  LoggerInitializer.hpp  Types.hpp  main.cpp
